--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.04MB/s(Youtube:不良林), server: hk5.lolvps.xyz, port: 46600, type: vmess, uuid: 836fe834-4204-460d-b586-52d9bd407e8b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /N4POVB85, ws-headers: {Host: hk5.lolvps.xyz}}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.75MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
   - {name: 🇨🇳 中国-3.19MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20140, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-13.61MB/s(Youtube:不良林), server: tw-oo-01.click, port: 443, type: trojan, password: s6rIg1Mkke73fwZU, sni: tw-oo-01.click, skip-cert-verify: true}
-  - {name: 未知国家-1.46MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 未知国家-1.36MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇺🇸 美国-10.56MB/s(Youtube:不良林), server: hk12.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk12.ningmengshui.xyz}}
-  - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: taobao.babazhuji.com, port: 443, type: vmess, uuid: 36712be8-f2ff-4875-8c67-95efd66ac994, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /didi, ws-headers: {Host: taobao.babazhuji.com}}
-  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.33MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 台湾-2.93MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-396.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇬🇧 英国-3.36MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇰🇷 韩国-13.28MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 未知国家-1.46MB/s(Youtube:不良林)
-      - 未知国家-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 未知国家-1.46MB/s(Youtube:不良林)
-      - 未知国家-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 未知国家-1.46MB/s(Youtube:不良林)
-      - 未知国家-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 未知国家-1.46MB/s(Youtube:不良林)
-      - 未知国家-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 未知国家-1.46MB/s(Youtube:不良林)
-      - 未知国家-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 未知国家-1.46MB/s(Youtube:不良林)
-      - 未知国家-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 未知国家-1.46MB/s(Youtube:不良林)
-      - 未知国家-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
