--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.75MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
-  - {name: 🇨🇳 中国-3.19MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20140, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.33MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 台湾-2.93MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-396.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇬🇧 英国-3.36MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇰🇷 韩国-13.28MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-13.61MB/s(Youtube:不良林), server: tw-oo-01.click, port: 443, type: trojan, password: s6rIg1Mkke73fwZU, sni: tw-oo-01.click, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: us-12.hmkj9.com, port: 54321, type: trojan, password: 1ac27c98-7883-483b-b958-7d6a68b60663, sni: us-12.hmkj9.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
+  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇭🇰 香港-1.07MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-12.79MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,21 +53,21 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -75,30 +75,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -106,15 +106,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,15 +131,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
