--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-13.61MB/s(Youtube:不良林), server: tw-oo-01.click, port: 443, type: trojan, password: s6rIg1Mkke73fwZU, sni: tw-oo-01.click, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: us-12.hmkj9.com, port: 54321, type: trojan, password: 1ac27c98-7883-483b-b958-7d6a68b60663, sni: us-12.hmkj9.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
-  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇭🇰 香港-1.07MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-12.79MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇫🇷 法国-2.75MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 未知国家-1.31MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇩🇪 德国-1.23MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-7.93MB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇺🇸 美国-6.24MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: b5d8e66a-ef1f-11ec-a893-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇨🇳 中国-943.3KB/s(Youtube:不良林), server: 43.154.93.14, port: 443, type: vmess, uuid: afe936ee-536e-4e94-8c46-71d222183729, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /vNz3qzS3ml, ws-headers: {Host: 43.154.93.14}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 未知国家-1.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 未知国家-1.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 未知国家-1.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 未知国家-1.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 未知国家-1.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 未知国家-1.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 未知国家-1.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
